libcaldav (0.6.2)
  * Fix bug to be able to handle HTTP HEADER lines split
    over multiple lines. Patch provided by Timothy Pearson
  * Automatically select most secure way supported by server
    when doing authentication.
  * Fix case sensitive search for displayname and etag tag.
  * Fixing multi threaded issues in gcrypt. See
    http://www.gnu.org/software/gnutls/manual/html_node/Multi_002dthreaded-applications.html
  * Added more robust checking for response codes.
  * Fixed a bug which caused an improper default runtime init setting.
  * Added support for FreeBusy requests.
  * Skip making bzip2 compressed distribution tarballs

-- Michael Rasmussen <mir@datanom.net>  Tue, 25 May 2010 22:51:03 +0100

libcaldav (0.6.1)
  * Fix redirection bug to fully support Zimbra server. Patch
    provided by Timothy Pearson

-- Michael Rasmussen <mir@datanom.net>  Tue, 25 May 2010 22:51:03 +0100

libcaldav (0.6.0)
  * Refactored to properly handle URL schema. Also fixes bug 2985320
  * More accurate error message in case of unresolable host or unable
    to get a connection. fixes feature request 2985321
  * Added support for FREEBUSY search
  * Fix bug 3003201. Solution provided by Dmitry Savenko

-- Michael Rasmussen <mir@datanom.net>  Mon, 12 Apr 2010 12:15:03 +0100

libcaldav (0.5.2)
  * Added a unit like testing framework
  * Make the use of locking configurable
  * Extend testing framework to test for this

-- Michael Rasmussen <mir@datanom.net>  Thu, 8 Apr 2010 12:15:03 +0100

libcaldav (0.5.1)
  * Honor request 2981083. Implement a response_free function
  * Honor request 2981100. Implement a runtime_info creation function
  * Fix bug 2981096. A number of memory leaks
  * Complete refactoring. Implement basic setup of curl instance in a
    function which all other function uses to ease maintainability and
    simplicity and to reduce the number of repeated code lines.

-- Michael Rasmussen <mir@datanom.net>  Sat, 3 Apr 2010 03:29:03 +0100

libcaldav (0.5.0)