@@ -118,14 +118,7 @@ gboolean caldav_getname(caldav_settings* settings, caldav_error* error) {
 		}
 		else {
 			gchar* displayname;
-			displayname = get_tag("displayname", chunk.memory);
-			/* Maybe namespace prefixed */
-			if (!displayname) {
-				displayname = get_tag("D:displayname", chunk.memory);
-				if (!displayname) {
-					displayname = get_tag("d:displayname", chunk.memory);
-				}
-			}
+			displayname = get_displayname(chunk.memory);
 			settings->file = (displayname) ? 
 					g_strdup(displayname) : g_strdup("");
 			g_free(displayname);
