@@ -1,3 +1,7 @@
+libcaldav (0.6.3)
+
+-- Michael Rasmussen <mir@datanom.net>  Sun, 12 Sep 2010 22:51:03 +0100
+
 libcaldav (0.6.2)
   * Fix bug to be able to handle HTTP HEADER lines split
     over multiple lines. Patch provided by Timothy Pearson
